# complexation-property-explorer

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_NOTICE.md  LICENSE  NOTICE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  run.command  run.sh  run_windows.bat  setup_windows.bat  start_windows.bat  tokens.css
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
assets/: app.css
complexation_explorer/: __init__.py  database.py  formatting.py  io_utils.py  ui.py
curation/: README.md  __init__.py  apply_reviews.py  review_decisions.template.csv
data/: README.md
data/raw/: .gitkeep
data/reports/: README.md  canonical_build_report.json  srd46_build_report.json  unified_rebuilt_build_report.json
docs/: DATA_SOURCE_INTEGRATION.md  DEVELOPMENT.md  User_Manual_v0.4.0.docx
ingestion/: __init__.py  build_canonical.py  build_unified.py  canonical_schema.sql
ingestion/adapters/: __init__.py  base.py  local_excel_supplement.py  nist_srd46.py
publication/: README.md  __init__.py  approval.template.json  publish_dataset.py
scripts/: build_srd46_sqlite.py  download_srd46.py  launch_app.py  prepare_app.py
tests/: __init__.py  support.py  test_canonical.py  test_configuration.py  test_curation.py  test_database.py  test_io_utils.py  test_launch_workflow.py  test_portable_smoke.py  test_publication.py  test_ui.py
