[project]
name = "complexation-property-explorer"
version = "0.3.0"
description = "A local, read-only explorer for metal-ligand complexation properties."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.14"
dependencies = [
  "streamlit==1.51.0",
  "pandas==2.3.3",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
